fixed the white space in the menu bar

--- a/00-odin-recipe-project/styles.css
+++ b/00-odin-recipe-project/styles.css
@@ -4,19 +4,28 @@
 body {
     background-color: white;
     color: black;
+    margin: 0;
+    padding: 0;
 }
 
 p{
     color: black;
+    margin-left: 20px;
 }
+
+li{
+    margin-left: 20px;
+}
+
 
 h1{
     text-align: center;
-    background-color: aqua;
-    color: black;
-    
-    
-   
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    margin-top: 0;
+    margin-bottom: 0 ;
+    margin-left: 0 ;
+    margin-right: 0 ;
 }
 
 /* * {
